fix(css): forgot password button alignment issue in login page

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -277,3 +277,8 @@ table {
 .mat-dialog-container {
   margin-top: -100px;
 }
+
+/* styles with attributes */
+[align=start] {
+  text-align: start;
+}
